# versioningit-test-case-factory

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  added-no-commits-default-tag.sh  default-tag.sh  dirty.sh  distance-dirty.json  distance-dirty.sh  distance.sh  exact.sh  multi-tag.sh  pattern.sh  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
cases/: no-tag.py  no-versioningit.py  shallow.py  template-fields-error.py
cases/archives/: git-archive-exact.py
cases/git/: added-no-commits-default-tag.py  archive-repo-exclude.py  archive-repo-match.py  archive-repo-mixed-tags.py  archive-repo-mixed.py  archive-repo.py  custom-format-dirty.py  custom-format-distance-dirty.py  custom-format-distance.py  custom-method-pkg.py  custom-method-src.py  custom-method.py  default-tag.py  default-version-bad.py  default-version-onbuild-write.py  default-version.py  detached-exact.py  dirty.py  distance-dirty.py  distance.py  exact-annotated.py  exact.py  exclude.py  match.py  onbuild-bases.py  onbuild-cfg.py  onbuild-nonidem.py  onbuild-write-fields.py  onbuild-write.py  onbuild.py  write-encoding.py  write-py.py  write-template.py  write-txt.py
cases/hg/: added-no-commits-default-tag.py  default-tag.py  dirty.py  distance-dirty.py  distance.py  exact.py  multi-tag.py  pattern.py
git/: Makefile  archive-repo-exclude.sh  archive-repo-match.sh  custom-format-dirty.sh  custom-format-distance-dirty.json  custom-format-distance-dirty.sh  custom-format-distance.json  custom-format-distance.sh  custom-method-pkg.sh  custom-method-src.sh  custom-method.json  custom-method.sh  distance-dirty.json  exact-annotated.sh  exact.sh  onbuild-bases.json  onbuild-bases.sh  onbuild-cfg.json  onbuild-nonidem.sh  onbuild-write-fields.json  onbuild-write-fields.sh  write-encoding.sh  write-py.json  write-py.sh  write-template.sh  write-txt.sh
git/cases/: added-no-commits-default-tag.sh  archive-repo-exclude.sh  archive-repo-mixed-tags.sh  archive-repo-mixed.sh  archive-repo.json  archive-repo.sh  custom-format-distance.sh  custom-method-pkg.json  custom-method-src.json  custom-method-src.sh  default-tag.json  default-tag.sh  default-version-bad.sh  default-version-onbuild-write.sh  default-version.sh  detached-exact.sh  dirty.sh  distance-dirty.sh  distance.sh  exclude.sh  match.json  match.sh  onbuild-bases.json  onbuild-cfg.sh  onbuild-nonidem.json  onbuild-write.json  onbuild-write.sh  onbuild.sh  write-encoding.json  write-template.json  write-txt.json
git/trees/0300-archive/: pyproject.toml  setup.cfg
git/trees/0300-archive-exclude/: pyproject.toml
git/trees/0300-archive-match/: pyproject.toml
git/trees/0300-custom/: pyproject.toml
git/trees/0300-custom-method/: pyproject.toml
git/trees/0300-custom-method-setup/: pyproject.toml  setup.py
git/trees/0300-default-tag/: pyproject.toml
git/trees/0300-default-version2/: pyproject.toml
git/trees/0300-exclude/: pyproject.toml
git/trees/0300-pattern/: pyproject.toml
git/trees/0300-write-py/: pyproject.toml
git/trees/0300-write-txt/: .gitignore
git/trees/0400-write-onbuild/: pyproject.toml
git/trees/0500-add-write-to-onbuild/: pyproject.toml  setup.cfg
git/trees/0500-onbuild-nonidem/: pyproject.toml
git/util/: format-json.py
hg/: Makefile  default-tag.sh  dirty.sh  distance-dirty.sh  distance.sh  exact.sh
hg/cases/: added-no-commits-default-tag.sh  default-tag.json  distance.json  multi-tag.json  multi-tag.sh  pattern.json  pattern.sh
patchdefs/: 0200-packaged.json  0300-archive-match.json  0300-archive-tags.json  0300-custom-format.json  0300-custom-method-setup.json  0300-custom-method-src.json  0300-default-version.json  0300-default-version2.json  0300-feature.json  0300-hg-dirt.json  0300-match.json  0300-write-encoding.json  0400-write-onbuild.json  0500-add-write-to-onbuild.json  0500-onbuild-bases.json  0500-onbuild-nonidem.json  0600-all-fields.json
special/: Makefile
special/cases/: no-pyproject.sh  no-tag.sh  no-versioningit.sh  template-fields-error.json  template-fields-error.sh
src/factory/: __init__.py  __main__.py  case.py  compare.py  factory.py  trees.py  util.py  vcs.py
src/factory/data/: hgignore
suite/cases/: archive-no-tag.py  hatch-no-tag.py  no-git.py  no-pyproject.py  no-tag.py  no-versioningit.py  sdist.py  shallow.py  template-fields-error.py
suite/patchdefs/: 0200-hg-packaged.json  0300-archive-exclude.json  0300-archive.json  0300-default-tag.json  0300-dirt.json  0300-exclude.json  0300-hg-default-tag.json  0300-hg-feature.json  0300-hg-pattern.json  0300-write-py.json  0300-write-template.json  0300-write-txt.json  0400-custom-method-pkg.json  0400-default-version-bad.json  0400-onbuild-cfg.json  0400-onbuild.json
suite/trees/0300-hatch-format-no-tool/: .description  pyproject.toml
suite/trees/0300-hatch-onbuild/: .description  pyproject.toml
suite/trees/0300-hatch-write-txt/: .description  pyproject.toml
suite/trees/0300-onbuild-cfg/: .description  setup.cfg
suite/trees/0400-hatch-onbuild-fields/: .description  pyproject.toml
suite/trees/0400-onbuild-write-norming/: .description  pyproject.toml  setup.cfg  setup.py
suite/trees/0500-onbuild-nonidem/: setup.cfg
suite/trees/0500-onbuild-nonidem/src/mypackage/: core.py
suite/trees/0500-onbuild-write/: pyproject.toml
suite/trees/0500-onbuild-write/src/mypackage/: core.py
trees/0200-hg-packaged/: pyproject.toml
trees/0200-no-versioningit/: pyproject.toml
trees/0200-packaged/: pyproject.toml
trees/0300-default-tag/: pyproject.toml  setup.cfg
trees/0300-default-version/: pyproject.toml
trees/0300-dirt/: setup.cfg
trees/0300-hg-dirt/: setup.cfg
trees/0300-hg-pattern/: pyproject.toml
trees/0300-match/: pyproject.toml
trees/0300-pattern/: .hgignore  pyproject.toml
trees/0300-template-fields-error/: pyproject.toml
trees/0300-write-encoding/: pyproject.toml
trees/0300-write-template/: pyproject.toml
trees/0300-write-txt/: pyproject.toml
trees/0400-custom-method-pkg/: pyproject.toml
trees/0400-onbuild-cfg/: setup.cfg
util/: cmpzips.py  deploy.sh  zip-git-repo.sh
(+156 files in other folders)
