[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factory"
version = "0.0.0"
description = "Building test case repositories for versioningit"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "test-case-factory@varonathe.org" }
]

keywords = [
    "packaging",
    "test case",
    "versioningit",
]

classifiers = [
    "Private :: Keep Off PyPI",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "build ~= 1.0",
    "click ~= 8.0",
    "click-loglevel ~= 0.5",
    "in-place ~= 1.0",
    "iterpath ~= 0.4",
    "pydantic ~= 2.0",
]

[project.scripts]
factory = "factory.__main__:main"

[project.urls]
"Source Code" = "https://github.com/jwodder/versioningit-test-case-factory"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "setup.cfg",
    "tox.ini",
]

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
# deal with some cases having the same filename:
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true
