[metadata]
name = mypackage
description = A test package
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = mypackage@varonathe.org
license = MIT
license_files = LICENSE

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = ~=3.6
install_requires =
    importlib-metadata; python_version < "3.8"

[options.packages.find]
where = src
