[build-system]
requires = ["setuptools >= 46.4.0", "versioningit"]
build-backend = "setuptools.build_meta"

[tool.versioningit.format]
distance = "{next_version}~{distance}"
dirty = "{version}~dirty"
distance-dirty = "{next_version}~{distance}.dirty"

[tool.versioningit.template-fields]
version-tuple = { pep440 = true }
