[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "mypackage"
dynamic = ["version"]
description = "A test package"
readme = "README.rst"
requires-python = ">=3.6"
authors = [
    { name = "John Thorvald Wodder II", email = "mypackage@varonathe.org" }
]

dependencies = ["importlib-metadata; python_version < '3.8'"]

[tool.hatch.version]
source = "versioningit"

[tool.hatch.version.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{version}+dirty"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.dirty"
