[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "mypackage"
dynamic = ["version"]
description = "A test package"
readme = "README.rst"
requires-python = ">=3.6"
authors = [
    { name = "John Thorvald Wodder II", email = "mypackage@varonathe.org" }
]

[tool.hatch.version]
source = "versioningit"

[tool.hatch.build.hooks.versioningit-onbuild]
source-file = "src/mypackage/__init__.py"
build-file = "mypackage/__init__.py"
