[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "mypackage"
dynamic = ["version"]
description = "A test package"
readme = "README.rst"
requires-python = ">=3.6"
authors = [
    { name = "John Thorvald Wodder II", email = "mypackage@varonathe.org" }
]

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.write]
file = "src/mypackage/version.txt"

[tool.hatch.build]
artifacts = ["src/mypackage/version.txt"]
