[metadata]
name = mypackage
description = A test package
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = mypackage@varonathe.org

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.6
cmdclass =
    build_py = versioningit.cmdclass.build_py
    sdist = versioningit.cmdclass.sdist

[options.packages.find]
where = src
