[build-system]
requires = ["setuptools >= 46.4.0", "versioningit"]
build-backend = "setuptools.build_meta"

[tool.versioningit.format]
distance = "{base_version}-r{distance}"
dirty = "{base_version}+dirty"
distance-dirty = "{base_version}-r{distance}+dirty"

[tool.versioningit.write]
file = "src/mypackage/_version.py"
template = """
__raw_version__ = "{version}"
__version__ = "{normalized_version}"\
"""

[tool.versioningit.onbuild]
source-file = "src/mypackage/__init__.py"
build-file = "mypackage/__init__.py"
regex = '^\s*__version__\s*=.*'
replacement = """
__raw_version__ = "{version}"
__version__ = "{normalized_version}"\
"""
